<resources>
    <string name="app_name">Popular Movies</string>
    <!-- Content descriptions-->
    <string name="movie_poster_content_description">Movie poster</string>
    <string name="movie_original_title">Original title:</string>
    <string name="movie_plot_synopsis">Plot synopsis:</string>
    <string name="movie_user_rating">User rating:</string>
    <string name="movie_release_date">Release date:</string>
    <string name="title_activity_detail">Details</string>
    <string name="action_settings">Sort criteria</string>
    <string name="pref_sort_crit" translatable="false">sorting_crit</string>
    <string name="pref_sort_label">Sorting criteria</string>
    <string name="pref_sort_crit_top_rated">By top rated</string>
    <string name="pref_sort_crit_popular">By popularity</string>
    <string name="pref_sort_crit_favorites">Favorites</string>
    <string name="pref_sort_crit_popular_key">popular</string>
    <string name="pref_sort_crit_top_rated_key">top_rated</string>
    <string name="pref_sort_crit_favorites_key">favorites</string>
    <string name="movie_reviews">Reviews:</string>
    <string name="mark_as_favorite_button_text">Mark as favorite</string>
    <string name="remove_from_favorite_button_text">Remove from favorites</string>
</resources>
